# DjangoTest

./: .env.sample  Dockerfile  db.sqlite3  pyproject.toml
static/css/: custom_admin.css
templates/admin/: base_site.html
testapi/: settings.py  urls.py
testapp/: admin.py  log_api_middleware.py  models.py  serializers.py  task.py  tests.py  views.py
testapp/migrations/: 0001_initial.py
